Implement Index in Mongo, add new index in Postgres and change index system in Redis for manage list of target or hashtags and others future usage
